# TopoCut-Studio

./: .gitignore  README.md  environment.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  test_vpype.py
config/: default_config.yaml
doc/: overview.md
src/elevation_relief/: __init__.py  calibration.py  main.py  main.py.bak  runtime_env.py
src/elevation_relief.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/elevation_relief/dataio/: dem.py  imagery.py  utils.py
src/elevation_relief/export/: dxf.py  plot.py
src/elevation_relief/geometry/: __init__.py  slicer.py  small_parts.py  smoothing.py
src/elevation_relief/imagery/: texture.py
src/elevation_relief/nesting/: bed_layout.py  packer.py
src/web/api/: main.py  models.py
src/web/ui/: index.html  package-lock.json  package.json  vite.config.ts
src/web/ui/src/: App.tsx  index.css  types.ts
src/web/ui/src/components/: JobResultsPanel.tsx  LayerStackPreview.tsx  MapSelector.tsx
src/web/ui/src/components/ui/: accordion.tsx  alert-dialog.tsx  alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  popover.tsx  progress.tsx  select.tsx  slider.tsx  switch.tsx  toggle-group.tsx  tooltip.tsx
tests/: test_sheet_labels.py
