[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "elevation-relief"
version = "0.1.0"
description = "Topographic Laser Cutting Pipeline"
authors = ["GitHub Copilot <copilot@github.com>"]
readme = "README.md"
packages = [{ include = "elevation_relief", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
click = "*"
numpy = "*"
rasterio = "*"
shapely = "*"
scipy = "*"
ezdxf = "*"
Pillow = "*"
pystac-client = "*"
planetary-computer = "*"
dem-stitcher = "*"
pyyaml = "*"
fastapi = "*"
uvicorn = { version = "*", extras = ["standard"] }
rectpack = "*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
black = "*"

[tool.poetry.scripts]
elevation-relief = "elevation_relief.main:main"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
